# sudoku-detector

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README  README.md  appveyor.yml  build.ps1  build.sh
src/: digitrecognizer.cpp  digitrecognizer.h  sudoku-tools.cpp  sudoku-tools.h  sudokusolver.cpp
